deploy/api-deployment.yaml
#########################################################
# Service for API
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: mahmoud-test
  labels:
    name: api
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
---
#########################################################
# Deployment for API 
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: mahmoud-test
  labels:
    name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: mhm0ud/springboot:latest
---
