deploy/k8s.yaml
#########################################################
# ingress
#########################################################
apiVersion: 'networking.k8s.io/v1'
kind: 'Ingress'
metadata:
  name: 'api-ingress'
  namespace: mahmoud-test
  labels:
    name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 'mahmoud-test'
    networking.gke.io/managed-certificates: 'managedcertificate-test'
    networking.gke.io/v1beta1.FrontendConfig: 'frontendconfig'
spec:
  rules:
    - host: mahmoud-test.mahmoudalmasri.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 8080
